mengubah isi pada section about me

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-4">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam doloremque aliquid sit officiis accusantium quis consequuntur aliquam voluptates tempore. Nam.</p>
+            <p>Halo perkenalkan nama saya Lalu Colleo Wahyu Dwi Lavida. Saat ini saya sedang menempuh jenjang kuliah Strata 1 di Universitas Bumigora Mataram.</p>
           </div>
           <div class="col-4">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nobis, in recusandae saepe magni maiores sequi exercitationem quasi, aliquam, impedit et officiis. Molestiae, optio odio!</p>
