ISI DESKRIPSI APA YANG DIUBAH 2

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p>Halo perkenalkan nama saya Lalu Colleo Wahyu Dwi Lavida. Saat ini saya sedang menempuh jenjang kuliah Strata 1 di Universitas Bumigora Mataram.</p>
           </div>
           <div class="col-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nobis, in recusandae saepe magni maiores sequi exercitationem quasi, aliquam, impedit et officiis. Molestiae, optio odio!</p>
+            <p>Hobi saya membaca buku dan berolahraga, Jurusan saya saat ini adalah Ilmu Komputer dan sudah sampai pada Semester 5</p>
           </div>
         </div>
       </div>
