--- a/index_wahyu.html
+++ b/index_wahyu.html
@@ -6,18 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
     <!-- Bootstrap Icon -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" />
 
     <!-- My CSS -->
 
@@ -27,20 +19,10 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top"
-    >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">ColleoLavida</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <a class="navbar-brand" href="#"USER WAHYU</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -65,12 +47,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img
-        src="img/3.jpg"
-        alt="Colleo Lavida"
-        width="200"
-        class="rounded-circle img-thumbnail"
-      />
+      <img src="img/3.jpg" alt="Colleo Lavida" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Colleo Lavida</h1>
       <p class="lead">Students | Dream chaser</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -93,17 +70,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-4">
-            <p>
-              Halo perkenalkan nama saya Lalu Colleo Wahyu Dwi Lavida. Saat ini
-              saya sedang menempuh jenjang kuliah Strata 1 di Universitas
-              Bumigora Mataram.
-            </p>
+            <p>Halo perkenalkan nama saya Lalu Colleo Wahyu Dwi Lavida. Saat ini saya sedang menempuh jenjang kuliah Strata 1 di Universitas Bumigora Mataram.</p>
           </div>
           <div class="col-4">
-            <p>
-              Hobi saya membaca buku dan berolahraga, Jurusan saya saat ini
-              adalah Ilmu Komputer dan sudah sampai pada Semester 5
-            </p>
+            <p>Hobi saya membaca buku dan berolahraga, Jurusan saya saat ini adalah Ilmu Komputer dan sudah sampai pada Semester 5</p>
           </div>
         </div>
       </div>
@@ -132,10 +102,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -143,10 +110,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -154,10 +118,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -165,10 +126,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -176,10 +134,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
@@ -208,27 +163,17 @@
             <form>
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="name"
-                  aria-describedby="name"
-                />
+                <input type="text" class="form-control" id="name" aria-describedby="name" />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  aria-describedby="email"
-                />
+                <input type="email" class="form-control" id="email" aria-describedby="email" />
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-success">Kirim</button>
+              <button type="submit" class="btn btn-primary">Kirim</button>
             </form>
           </div>
         </div>
@@ -245,21 +190,10 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center p-3">
-      <p>
-        Created with <i class="bi bi-suit-heart-fill text-danger"></i> by
-        <a
-          href="https://www.instagram.com/colleolavida/"
-          class="text-white fw-bold"
-          >Colleo Lavida</a
-        >
-      </p>
+      <p>Created with <i class="bi bi-suit-heart-fill text-danger"></i> by <a href="https://www.instagram.com/colleolavida/" class="text-white fw-bold">Colleo Lavida</a></p>
     </footer>
     <!-- Akhir Footer -->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
